--- a/acronyms.tex
+++ b/acronyms.tex
@@ -9,4 +9,5 @@
 \acro{HRTF}{Head-related transfer function}
 \acro{JVM}{Java Virtual Machine}
 \acro{FOV}{Field of View}
+\acro{EFT}{Elliptic Fourier Transform}
 \end{acronym}
