--- a/references.bib
+++ b/references.bib
@@ -6,6 +6,17 @@
   urldate = {2015-04-06}
 }
 
+@article{suzuki1985topological,
+  title={Topological structural analysis of digitized binary images by border following},
+  author={Suzuki, Satoshi and others},
+  journal={Computer Vision, Graphics, and Image Processing},
+  volume={30},
+  number={1},
+  pages={32--46},
+  year={1985},
+  publisher={Elsevier}
+}
+
 @online{primesense-irstream,
     author = {Anand Muglikar},
     title = {Accessing IR Video Stream from PrimeSense 3D Sensor using OpenNI and OpenCV},
