--- a/acronyms.tex
+++ b/acronyms.tex
@@ -10,4 +10,6 @@
 \acro{JVM}{Java Virtual Machine}
 \acro{FOV}{Field of View}
 \acro{EFT}{Elliptic Fourier Transform}
+\acro{PSVA}{Prosthesis Substituting Vision for Audition}
+\acro{FPGA}{Field-programmable grid array}
 \end{acronym}
