--- a/references.bib
+++ b/references.bib
@@ -17,6 +17,69 @@
   publisher={Elsevier}
 }
 
+@article{liao1996image,
+  title={On image analysis by moments},
+  author={Liao, Simon Xinmeng and Pawlak, Miroslaw},
+  journal={Pattern analysis and machine intelligence, IEEE Transactions on},
+  volume={18},
+  number={3},
+  pages={254--266},
+  year={1996},
+  publisher={IEEE}
+}
+
+@article{hu1962visual,
+  title={Visual pattern recognition by moment invariants},
+  author={Hu, Ming-Kuei},
+  journal={Information Theory, IRE Transactions on},
+  volume={8},
+  number={2},
+  pages={179--187},
+  year={1962},
+  publisher={IEEE}
+}
+
+@inproceedings{liao1997image,
+  title={Image analysis with Zernike moment descriptors},
+  author={Liao, Simon X and Pawlak, Miroslaw},
+  booktitle={1997 IEEE Canadian Conference on Electrical and Computer Engineering (IEEE, 1997)},
+  volume={2},
+  pages={700--703},
+  year={1997}
+}
+
+@article{abboud2014eyemusic,
+  title={EyeMusic: Introducing a “visual” colorful experience for the blind using auditory sensory substitution},
+  author={Abboud, Sami and Hanassy, Shlomi and Levy-Tzedek, Shelly and Maidenbaum, Shachar and Amedi, Amir},
+  journal={Restorative neurology and neuroscience},
+  volume={32},
+  number={2},
+  pages={247--257},
+  year={2014},
+  publisher={IOS Press}
+}
+
+@INPROCEEDINGS{412057, 
+author={Capelle, C. and Faik, C. and Trullemans, C. and Veraart, C.}, 
+booktitle={Engineering in Medicine and Biology Society, 1994. Engineering Advances: New Opportunities for Biomedical Engineers. Proceedings of the 16th Annual International Conference of the IEEE}, 
+title={Real time experimental visual prosthesis using sensory substitution of vision by audition}, 
+year={1994}, 
+month={Nov}, 
+pages={255-256 vol.1}, 
+keywords={hearing;sensory aids;vision defects;audition;blindness rehabilitation;conceptual model;learning;performance increase;psychophysical experimentations;real time experimental visual prosthesis;visual sensory substitution;Blindness;Ear;Fourier transforms;Image resolution;Inverse problems;Neural prosthesis;Prosthetics;Psychology;Retina;Signal resolution;Visual prosthesis;Visual system}, 
+doi={10.1109/IEMBS.1994.412057},}
+
+
+
+@incollection{amayeh2005accurate,
+  title={Accurate and efficient computation of high order zernike moments},
+  author={Amayeh, Gholamreza and Erol, Ali and Bebis, George and Nicolescu, Mircea},
+  booktitle={Advances in visual computing},
+  pages={462--469},
+  year={2005},
+  publisher={Springer}
+}
+
 @online{primesense-irstream,
     author = {Anand Muglikar},
     title = {Accessing IR Video Stream from PrimeSense 3D Sensor using OpenNI and OpenCV},
