--- a/main.tex
+++ b/main.tex
@@ -112,11 +112,11 @@ May 2015
 
 }
 
-\cleardoublepage
+\newpage
 
 \input{Support/abstract.tex}
 
-\clearpage
+\newpage
 
 \tableofcontents*
 
@@ -124,7 +124,6 @@ May 2015
 
 %\lstlistoflistings
 
-\clearpage
 \mainmatter
 
 \chapter{Introduction}
@@ -142,11 +141,11 @@ May 2015
 \chapter{Implementation}
 \input{MainBody/implementation.tex}
 
-\clearpage
+\newpage
 \input{acronyms.tex}
 
 
-\clearpage
+\newpage
 \printbibliography
 
 
