--- a/references.bib
+++ b/references.bib
@@ -48,6 +48,17 @@
   year={1997}
 }
 
+@article{kuhl1982elliptic,
+  title={Elliptic Fourier features of a closed contour},
+  author={Kuhl, Frank P and Giardina, Charles R},
+  journal={Computer graphics and image processing},
+  volume={18},
+  number={3},
+  pages={236--258},
+  year={1982},
+  publisher={Elsevier}
+}
+
 @article{abboud2014eyemusic,
   title={EyeMusic: Introducing a “visual” colorful experience for the blind using auditory sensory substitution},
   author={Abboud, Sami and Hanassy, Shlomi and Levy-Tzedek, Shelly and Maidenbaum, Shachar and Amedi, Amir},
