--- a/MainBody/implementation.tex
+++ b/MainBody/implementation.tex
@@ -270,7 +270,7 @@ One approach was to use a standard K-Means (see section \ref{sec:kmeans}) image 
     \caption{RGBD K-means segmentation}
 \end{figure}
 
-These results were fairly good - the addition of the depth channel resulted in a smoother segmentation. However, using raw images from the camera for segmentation resulted in a fairly noisy image. Applying a Russian blur to the image ($\diameter = 5$, $\sigma = 2$) removed some of the noise, at the expense of sharpness in the image.
+These results were fairly good - the addition of the depth channel resulted in a smoother segmentation. However, using raw images from the camera for segmentation resulted in a fairly noisy image. Applying a gaussian blur to the image ($\diameter = 5$, $\sigma = 2$) removed some of the noise, at the expense of sharpness in the image.
 
 \begin{figure}[H]
     \centering
